fix scrollbar

--- a/ui/style.css
+++ b/ui/style.css
@@ -291,12 +291,12 @@ input:disabled {
 	background: black;
 	border-radius: 10px;
 	width: 10px;
+	height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
 	background-color: white;
 	border-radius: 10px;
-	width: 10px;
 }
 
 .object {
